<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/chip"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:contentDescription="@string/circle"
        android:src="@drawable/circle" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/backButton"
        android:layout_alignBottom="@+id/backButton"
        android:layout_toLeftOf="@+id/backButton"
        android:gravity="center_horizontal|center"
        android:text="@string/left" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/backButton"
        android:layout_alignBottom="@+id/backButton"
        android:layout_toRightOf="@+id/backButton"
        android:gravity="center_horizontal|center"
        android:text="@string/right" />

    <ImageView
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/circle" />

</RelativeLayout>